--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,14 @@ url: "http://pt-dbpedia.github.io/" # the base hostname & protocol for your site
 twitter_username: dbpedia_pt
 github_username:  dbpedia-pt
 
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jekyll-polyglot]
 
 paginate: 6
+
+languages: ["en", "pt"]
+default_lang: "pt"
+exclude_from_localization: ["javascript", "images", "css", "public"]
+
 
 
 # Build settings
